@@ -1,3 +1,7 @@
+2016-08-02 Albert Chu <chu11@llnl.gov>
+	
+	* ipmi-oem/: Add Gigabyte get/set-nic-mode commands.
+
 2016-08-01 Albert Chu <chu11@llnl.gov>
 
 	* common/toolcommon/tool-sensor-common.h: Increase max sensor
